terraform/main.tf
provider "aws" {
  region = var.region
}

# security group con reglas de entrada para puerto 8000 y 22
resource "aws_security_group" "api_sg" {
  name        = "api-sg"
  description = "Permite trafico HTTP y SSH"

  ingress {
    description = "Puerto API"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Puerto SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "api-sg"
  }
}

# instancia EC2 con el security group explicitamente asignado
resource "aws_instance" "api_server" {
  ami                    = var.ami
  instance_type          = "t3.micro"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.api_sg.id]

  user_data = <<-EOF
    #!/bin/bash
    apt-get update -y
    apt-get install -y docker.io docker-compose git
    systemctl start docker
    systemctl enable docker
    usermod -aG docker ubuntu
  EOF

  tags = {
    Name = "fastapi-devops"
  }
}
